# tcl-dp

./: CHANGES  CHANGES.md  CMakeLists.txt  FAQ  LICENSE  README  README.md  TODO  dp.tek  teki.tcl
.github/workflows/: build.yml
api/: CMakeLists.txt  README  dpApi.c  dpApi.h  dpApiExample.c
doc/: DP_Address3.html  DP_Packet3.html  DP_RPC3.html  Tcl-DP.html  Tcl-DP.n  dp_accept.html  dp_address.html  dp_address.n  dp_admin.html  dp_atclose.html  dp_atexit.html  dp_atexit.n  dp_connect.html  dp_copy.html  dp_distribObj.html  dp_distribObj.n  dp_filehandler.html  dp_filehandler.n  dp_index.html  dp_netinfo.html  dp_object.html  dp_object.n  dp_rdo.html  dp_recv.html  dp_rpc.html  dp_rpc.n  dp_send.html  dp_socketOption.html  dp_socketOption.n  dpwish.1  dpwish.html  email.html  filter.html  index.html  ipm.html  makerpcclient.html  makerpcserver.html  sample.html  serial.html  tcp.html  (+4 more)
doc/man1/: dpwish.1  nsd.1
doc/man3/: DP_Address.3  DP_Packet.3  DP_RPC.3
doc/mann/: dp_address.n  dp_atclose.n  dp_connect.n  dp_filehandler.n  dp_rpc.n  dp_socketOption.n
dplite/: Makefile.in  configure  configure.in  tk.h  tkAppInit.c  tkArgv.c  tkBind.c  tkCmds.c  tkConfig.h  tkEvent.c  tkInt.h  tkPreserve.c
dunix_patch/: dp.tek  dpSerial.c
examples/conference/: README  enter.tcl  room.tcl
examples/ftp/: client  client.tcl  server  server.tcl
examples/load-monitor/: loadmon
examples/services/: Makefile  README  services.1  services.l
examples/services/cmcap/: cmcap.l
examples/tictactoe/: README  board.tcl  interface.tcl  playerO.tcl  playerX.tcl
examples/whiteboard/: readme  wb.tcl  wbClient.tcl  wbServer.tcl
generic/: dp.h  dpChan.c  dpCmds.c  dpFilters.c  dpIPM.c  dpIdentity.c  dpInit.bak  dpInit.c  dpInt.h  dpPackOff.c  dpPatch.h  dpPlugF.c  dpPort.h  dpRPC.c  dpSerial.c  dpSock.c  dpTcp.c  dpUdp.c  dpconfig.h.in  pkgIndex.tcl.in
man/man3/: Address.3  Packet.3  RPC.3
man/manl/: Tcl-DP.l  address.l  connect.l  distObj.l  filehandler.l  object.l  rpc.l
nameserver/: INSTALL  Makefile.in  configure  configure.in  configure.users  killns.base  launchd.base  ns.base  ns.c  nscap.base  nsi.base  nslib.c  nslib.h  startns.base  tkAppInit.c  tkMain.c
nameserver/doc/: installns.l  ns.l  nslib.l
nameserver/examples/: client  server  server.demand
public_html/: index.html  style.css
public_html/cornell/: dp97.doc
public_html/cornell/Tutorial/: tutorial.html
public_html/cornell/dp97/: index.html
services/: services.1  services.n
tekilib/: debug.tcl  http.tcl  pkgIndex.tcl  progress-tcl.tcl  progress-tk.tcl  undo.tcl  wise.tcl
tests/: README  README.md  all.tcl  api.test  connect.test  copy.test  email.test  identity.test  ipm.test  make-server  netinfo.test  plugin.test  plugin2.test  rpc.test  ser_xmit.test  serial.test  server  tcp.test  testconfig.tcl.in  udp.test  xmit.test
unix/: .purify  dpAppInit.c  dpEFilter.c  dpEmail.c  dpInit.c  dpLocks.c  dpPort.h  dpSerial.c  dpSock.c  dpUnixIpm.c  dpUnixTcp.c  dpUnixUdp.c
win/: dpAppInit.c  dpPort.h  dpWinIPM.c  dpWinInit.c  dpWinSerial.c  dpWinSock.c  dpWinTcp.c  dpWinUDP.c  makefile.76  makefile.80  makefile.bc  pkgIndex.tcl  tcl-dp40.dsw  tcl-dp40.mbt  tcl-dp40.mrt  tcl-dp40.rc
